# src/api/dtos/user_dto.go
@@ -10,3 +10,8 @@ type TokenDetail struct {
 	AccessTokenExpireTime  int64  `json:"accessTokenExpireTime"`
 	RefreshTokenExpireTime int64  `json:"refreshTokenExpireTime"`
 }
+
+type RegisterLoginByMobileRequest struct {
+	MobileNumber string `json:"mobileNumber" binding:"required,mobile,min=11,max=11"`
+	Otp          string `json:"otp" binding:"required,min=6,max=6"`
+}
